# mytuiapp

./: .gitignore  Cargo.toml  README.md
src/: context.rs  credits.rs  lib.rs  main.rs  render.rs  twee.rs  twitter.rs  vim.rs
src/apis/: credits.rs  mod.rs  tweets.rs
src/controllers/: mod.rs  timeline_controller.rs
src/interactors/: get_timeline_interactor.rs  mod.rs  post_tweet_interactor.rs  quit_app_interactor.rs
src/models/: credits.rs  cursor.rs  mod.rs  tweet.rs
src/pages/: home_timeline.rs  mod.rs  tweet_detail.rs
src/presenters/: tweets.rs
src/view/: home_timeline.rs  mod.rs
src/views/: tweets.rs
