[package]
name = "rwitter"
version = "0.1.0"
authors = ["yongikim <yongi.kim08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
dirs = "*"
oauth-client = "*"
terminal_size = "*"
